--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <button class="scissors">Scissors</button>
+    <button class="rock">Rock</button>
+    <button class="paper">Paper</button>
 </body>
-<script src="script.js"></script>
+
 </html>
