Change button-classes to ids

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <button class="scissors">Scissors</button>
-    <button class="rock">Rock</button>
-    <button class="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
 </body>
 
 </html>
