Add additional ui-content

--- a/index.html
+++ b/index.html
@@ -8,9 +8,30 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <button id="scissors">Scissors</button>
-    <button id="rock">Rock</button>
-    <button id="paper">Paper</button>
+    <h1>What weapon will you choose?</h1>
+    <div class="buttons">
+         <button id="scissors">Scissors</button>
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+    </div>
+
+    <div class="message"></div>
+
+    <div class="scores">
+        <div>
+            <p>Player:
+                <span class="playerScore"></span>
+            </p>
+        </div>
+        <div>
+            <p>Computer:
+                <span class="computerScore"></span>
+            </p>
+        </div>
+    </div>
+
+    <div class="restart"><button class="btnRestart">Restart Game</button></div>
+   
 </body>
 
 </html>
