--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <h1>What weapon will you choose?</h1>
+    <h1>Battle for eternal glory!</h1>
+    <h2>What weapon will you choose?</h2>
     <div class="buttons">
          <button id="scissors">Scissors</button>
         <button id="rock">Rock</button>
@@ -28,9 +29,10 @@
                 <span class="computerScore"></span>
             </p>
         </div>
+        <div class="restart"><button id="btnRestart">Restart Game</button></div>
     </div>
 
-    <div class="restart"><button class="btnRestart">Restart Game</button></div>
+    <div class="endMessage"></div>    
    
 </body>
 
