Fix bottom of page moving after showing results

--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <h1>Battle for eternal glory!</h1>
-    <h2>What weapon will you choose?</h2>
+    <h1>ROCK PAPER SCISSORS</h1>
+    <h2>FIRST TO 5</h2>
+    <h3>Choose your weapon:</h3>
     <div class="buttons">
         <button id="scissors">Scissors</button>
         <button id="rock">Rock</button>
         <button id="paper">Paper</button>
     </div>
 
-    <div class="message"></div>
+    <div class="message">
+        <div class="results"></div>
+    </div>
 
     <div class="scores">
         <div>
